# TAC-P0

./: CMakeLists.txt  README.md  output  output.csv  zip.sh
data/: output_gcd.csv  output_primes.csv
report/: report.tex
report/img/: .gitignore
report/parts/: 0-cover.tex  1-resumen.tex  2-desarrollo.tex  2.1-diseño.tex  2.2-impementacion.tex  2.3-ev_analitica.tex  2.4-ev_empirica.tex  3-conclusiones.tex  4-referencias.tex  appendix.tex
src/: .gitignore  CMakeLists.txt  mcd_1  mcd_1.cpp  primos.cpp  test.py
src/gcd/: CMakeLists.txt  gcd.hpp  gcd_euclid.cpp  gcd_factorize.cpp  gcdlib.cpp  mcpd.cpp  test.cpp  test.py
src/primes/: CMakeLists.txt  primes.hpp  primeslib.cpp  test.cpp  test.py
